# GoL

./: .gitignore  CMakeLists.txt  GoL_Linux  Readme.md  bigtest.txt  pulsartest.txt  test.txt  test_input.txt
App/: AliveCell.cpp  AliveCell.h  AliveStaticC.cpp  AliveStaticC.h  Cell.cpp  Cell.h  DeadStaticC.cpp  DeadStaticC.h  GameOfLifeCLI.cpp  GameOfLifeCLI.hpp  GameOfLifeGUI.cpp  GameOfLifeGUI.hpp  main.cpp  main_CLI.cpp
App/Cell/: AliveCell.cpp  AliveCell.hpp  AliveStaticC.cpp  AliveStaticC.hpp  Cell.cpp  Cell.hpp  CellFactory.cpp  CellFactory.h  CellFactory.hpp  CellType.h  CellType.hpp  DeadStaticC.cpp  DeadStaticC.hpp  PatternLibrary.hpp
App/Grid/: Grid.cpp  Grid.hpp  GridObject.cpp  GridObject.hpp  Test.cpp
App/Managers/: FileManager.cpp  FileManager.hpp  HasHistoryManager.cpp  HashHistoryManager.cpp  HashHistoryManager.hpp  InputHandler.cpp  InputHandler.hpp  PatternCell.hpp  PatternLibrary.hpp  PatternManager.cpp  PatternManager.hpp  PatternMap.hpp  SFMLManager.cpp  SFMLManager.hpp  SimManager.cpp  SimManager.hpp
App/Tests/: CellLogic.cpp  FileManLogic.cpp  GridObjectLogic.cpp  HashHistoryLogic.cpp  ManagersTests.cpp  PatternManLogic.cpp  SimManagerLogic.cpp
Diagrams/: GoL_Diagramsv2.drawio  GoL_yuzcez.drawio
output/: test_state.txt
test_old/: glider_highway.txt  hugetest.txt  test_empty.txt
